Fix page one spacing

--- a/src/index.css
+++ b/src/index.css
@@ -343,8 +343,7 @@ button[data-active="true"] {
   position: relative;
   display: grid;
   grid-template-columns: 8.5in 8.5in;
-  column-gap: 0.25rem;
-  row-gap: 0.125rem;
+  gap: 0.25rem;
   min-height: 24in;
 }
 
